--- a/first.html
+++ b/first.html
@@ -9,12 +9,13 @@
   
 </head>
 <body>
+  
   <div class="container">
     <header>
-      <h2>Prompt</h2>
+      <h2>Prompt 1</h2>
     </header>
     <div class="prompt-1">
-      <input type="text" name="input" id="input1">
+      <input type="text" name="input" id="input1" placeholder="Item text...">
       <button id="add-btn-1" onclick="addItem(this)">&#x002B; Add</button>
       <div id="list">
         <div>this <button onclick="kamikazi(this)">&#x2715;</button></div>
@@ -25,5 +26,6 @@
     </div>
 
   </div>
+  <a href="index.html">back</a>
 </body>
 </html>
