This is the version ready to be published
hi Greg and Paton

--- a/third.html
+++ b/third.html
@@ -5,9 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>3</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
   <script src="third.js"></script>
 </head>
 <body>
-  
+  <div class="container">
+    <h2>Prompt 3</h2>
+
+    <div id="treeview">
+
+
+      <!-- <input type="checkbox" name="" id="item-${index}">
+      <label for="item-${index}">${item.name}</label>
+      <div class="drp-dwn">
+      </div>
+      <input type="checkbox" name="" id="branch-2">
+      <label for="branch-2">branch-2 testing babyyyy</label>
+      <div class="drp-dwn">
+        content babyyyyyy
+      </div>      -->
+
+    </div>
+  </div>
+  <a href="index.html">back</a>
 </body>
 </html>
