--- a/first.html
+++ b/first.html
@@ -15,13 +15,15 @@
       <h2>Prompt 1</h2>
     </header>
     <div class="prompt-1">
-      <input type="text" name="input" id="input1" placeholder="Item text...">
-      <button id="add-btn-1" onclick="addItem(this)">&#x002B; Add</button>
-      <div id="list">
-        <div>this <button onclick="kamikazi(this)">&#x2715;</button></div>
-        <div>is <button onclick="kamikazi(this)">&#x2715;</button></div>
-        <div>a <button onclick="kamikazi(this)">&#x2715;</button></div>
-        <div>list <button onclick="kamikazi(this)">&#x2715;</button></div>
+      <div class="head-1-cont">
+        <input type="text" name="input" id="input1" placeholder="I am text...">
+        <button id="add-btn-1" onclick="addItem(this)">&#x002B; Add</button>
+      </div>
+        <div id="list">
+        <div><div>this</div> <button onclick="kamikazi(this)">&#x2715;</button></div>
+        <div><div>is</div> <button onclick="kamikazi(this)">&#x2715;</button></div>
+        <div><div>a</div> <button onclick="kamikazi(this)">&#x2715;</button></div>
+        <div><div>list</div> <button onclick="kamikazi(this)">&#x2715;</button></div>
       </div>
     </div>
 
